--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <meta property="og:site_name" content="Peer">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Ctext x='50' y='70' font-size='70' text-anchor='middle' font-family='Arial'%3EP%3C/text%3E%3C/svg%3E" type="image/svg+xml">
   <style>
+    body * {
+      color: #fff;
+    }
+
     body,
     html {
       margin: 0;
@@ -18,7 +22,6 @@
       height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #121212;
-      color: #eee;
       display: flex;
       flex-direction: column;
     }
@@ -28,6 +31,7 @@
       display: flex;
       height: 98%;
       border-top: 1px solid #333;
+      flex-direction: column;
     }
 
     #messages {
@@ -41,13 +45,6 @@
       max-width: 100vw;
     }
 
-    #chatPanel {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      background: #171717;
-    }
-
     #chatHeader {
       padding: 15px 20px;
       border-bottom: 1px solid #333;
@@ -59,13 +56,11 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      color: white;
     }
 
     #menuBtn {
       background: transparent;
       border: none;
-      color: white;
       font-size: 1.5rem;
       cursor: pointer;
       padding: 0;
@@ -98,7 +93,6 @@
     #menu button {
       background: transparent;
       border: none;
-      color: white;
       width: 100%;
       padding: 8px 15px;
       text-align: left;
@@ -118,22 +112,8 @@
       line-height: 1.3;
       word-wrap: break-word;
       background: #2a2a2a;
-      color: #ddd;
       align-self: flex-start;
-    }
-
-    .message.from-me {
-      border-bottom-right-radius: 4px;
-    }
-
-    .message.from-them {
       border-bottom-left-radius: 4px;
-    }
-
-    @media (max-width: 521px) {
-      .message.from-me {
-        align-self: flex-end;
-      }
     }
 
     #messageForm {
@@ -151,7 +131,6 @@
       outline-offset: 2px;
       font-size: 1rem;
       background: #2a2a2a;
-      color: #eee;
       width: 80%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 1rem;
@@ -170,7 +149,6 @@
       margin-left: 12px;
       background: #3a86ff;
       border: none;
-      color: white;
       font-weight: 600;
       padding: 0 18px;
       border-radius: 20px;
@@ -212,16 +190,14 @@
       border-radius: 8px;
       border: none;
       font-size: 1.1rem;
-      outline-offset: 2px;
       background: #2a2a2a;
-      color: #eee;
+      box-sizing: border-box;
     }
 
     #usernameModalContent button {
       margin-top: 16px;
       background: #3a86ff;
       border: none;
-      color: white;
       font-weight: 600;
       padding: 10px 24px;
       border-radius: 8px;
@@ -239,10 +215,6 @@
       width: 8px;
     }
 
-    ::-webkit-scrollbar-track {
-      background: #333;
-    }
-
     ::-webkit-scrollbar-thumb {
       background: #555;
       border-radius: 6px;
@@ -255,7 +227,6 @@
     #attachBtn {
       background: #2a2a2a;
       border: none;
-      color: #fff;
       font-weight: 600;
       padding: 10px 12px;
       border-radius: 20px;
@@ -273,11 +244,6 @@
     #attachBtn:hover {
       background: #36393e;
     }
-
-    #attachBtn:disabled {
-      background: #555;
-      cursor: not-allowed;
-    }
   </style>
 </head>
 
@@ -290,25 +256,23 @@
     </div>
   </div>
   <div id="app">
-    <section id="chatPanel">
-      <div id="chatHeader">
-        <button id="menuBtn" onclick="document.getElementById('menu').classList.toggle('hidden');" title="Menu" aria-label="Menu">&#9776;</button>
-        <div id="menu" class="hidden">
-          <ul>
-            <li><button onclick="window.open('https://github.com/forexample-u/peer', '_blank')">Github</button></li>
-            <li><button id="option2">Change wallpaper</button></li>
-            <li><button onclick="localStorage.removeItem('username'); localStorage.removeItem('color'); location.reload();">Change username</button></li>
-          </ul>
-        </div>
+    <div id="chatHeader">
+      <button id="menuBtn" onclick="document.getElementById('menu').classList.toggle('hidden');" title="Menu" aria-label="Menu">&#9776;</button>
+      <div id="menu" class="hidden">
+        <ul>
+          <li><button onclick="window.open('https://github.com/forexample-u/peer', '_blank')">Github</button></li>
+          <li><button id="option2">Change wallpaper</button></li>
+          <li><button onclick="localStorage.removeItem('username'); localStorage.removeItem('color'); location.reload();">Change username</button></li>
+        </ul>
       </div>
-      <div id="messages"></div>
-      <form id="messageForm" autocomplete="off">
-        <button type="button" id="attachBtn" onclick="fileInput.click();" title="Attach file">📎</button>
-        <textarea type="text" id="messageInput" placeholder="Write a message..."></textarea>
-        <button type="submit" id="sendbutton">Send</button>
-        <input type="file" id="fileInput" style="display:none;" />
-      </form>
-    </section>
+    </div>
+    <div id="messages"></div>
+    <form id="messageForm" autocomplete="off">
+      <button type="button" id="attachBtn" onclick="fileInput.click();" title="Attach file">📎</button>
+      <textarea type="text" id="messageInput" placeholder="Write a message..."></textarea>
+      <button type="submit" id="sendbutton">Send</button>
+      <input type="file" id="fileInput" style="display:none;" />
+    </form>
   </div>
 
   <script>
@@ -375,10 +339,10 @@
       div.id = `m${dataid}`;
       div.className = 'message ' + (data.from === username && data.color === color ? 'from-me' : 'from-them');
       const headerDiv = document.createElement('div');
+      headerDiv.style.color = data.color;
       headerDiv.style.fontWeight = '600';
       headerDiv.style.fontSize = '0.8rem';
       headerDiv.style.marginBottom = '4px';
-      headerDiv.style.color = data.color;
       headerDiv.style.wordWrap = 'break-word';
       headerDiv.style.overflowWrap = 'break-word';
       headerDiv.style.maxWidth = '100%';
@@ -403,9 +367,9 @@
         if (urlRegex.test(part)) {
           const link = document.createElement('a');
           link.href = part;
+          link.target = '_blank';
           link.style.color = "#fff";
           link.textContent = part;
-          link.target = '_blank';
           textDiv.appendChild(link);
         } else {
           textDiv.appendChild(document.createTextNode(part));
@@ -419,16 +383,14 @@
         let fileElement;
         if (['mp4', 'webm', 'ogv', 'avi', 'mov', 'mkv', 'flv', 'wmv'].includes(ext)) {
           fileElement = document.createElement('video');
-          fileElement.controls = true;
           fileElement.style.maxWidth = '100%';
-          fileElement.style.marginTop = '8px';
+          fileElement.controls = true;
           const source = document.createElement('source');
           source.src = data.fileurl;
           fileElement.appendChild(source);
         } else if (['mp3', 'wav', 'ogg', 'aac', 'flac', 'm4a', 'wma'].includes(ext)) {
           fileElement = document.createElement('audio');
           fileElement.controls = true;
-          fileElement.style.marginTop = '8px';
           const source = document.createElement('source');
           source.src = data.fileurl;
           fileElement.appendChild(source);
@@ -437,20 +399,18 @@
           fileElement.src = data.fileurl;
           fileElement.alt = 'Attached image';
           fileElement.style.maxWidth = '100%';
-          fileElement.style.marginTop = '8px';
         } else {
           fileElement = document.createElement('a');
           fileElement.href = data.fileurl;
           fileElement.target = "_blank";
-          fileElement.style.color = '#fff';
           fileElement.textContent = data.fileurl;
           fileElement.style.display = 'block';
-          fileElement.style.marginTop = '8px';
           fileElement.style.maxWidth = '100%';
           fileElement.style.wordBreak = 'break-word';
           fileElement.style.overflowWrap = 'break-word';
           fileElement.style.whiteSpace = 'normal';
         }
+        fileElement.style.marginTop = '8px';
         div.appendChild(fileElement);
       }
       messagesEl.appendChild(div);
@@ -487,7 +447,7 @@
     });
 
     document.addEventListener('DOMContentLoaded', async () => {
-      if (color.length > 0) {
+      if (color) {
         chatHeader.innerHTML = username + chatHeader.innerHTML;
         chatHeader.style.color = color;
         await renderMessages();
@@ -518,12 +478,9 @@
       if (e.key === 'Enter') usernameModalSubmitBtn.click();
     });
 
-    fileInput.addEventListener('change', async () => {
-      const file = fileInput.files[0];
-      if (file) {
-        attachBtn.title = file.name;
-        attachBtn.innerHTML = "📄";
-      }
+    fileInput.addEventListener('change', () => {
+      attachBtn.title = fileInput.files[0].name;
+      attachBtn.innerHTML = "📄";
     });
 
     messageInput.addEventListener('input', autoResize);
