--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       color: #fff;
     }
 
-    body,
-    html {
+    body, html {
       margin: 0;
       padding: 0;
       height: 100%;
@@ -30,12 +29,10 @@
       flex: 1;
       display: flex;
       height: 98%;
-      border-top: 1px solid #333;
       flex-direction: column;
     }
 
     #messages {
-      flex: 1;
       padding: 15px 20px;
       overflow-y: auto;
       background: #121212;
@@ -54,7 +51,6 @@
       background: #1f1f1f;
       position: relative;
       display: flex;
-      align-items: center;
       justify-content: space-between;
     }
 
@@ -77,7 +73,6 @@
       margin-top: 5px;
       min-width: 120px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.5);
-      z-index: 1000;
     }
 
     #menu.hidden {
@@ -123,13 +118,30 @@
       background: #1f1f1f;
     }
 
-    #messageForm textarea[type="text"] {
+    #attachBtn {
+      background: #2a2a2a;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background-color 0.2s ease;
+      margin-right: 12px;
+      width: 36px;
+      height: 38px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #attachBtn:hover {
+      background: #36393e;
+    }
+
+    #messageForm textarea {
       flex: 1;
       padding: 10px 14px;
       border-radius: 20px;
       border: none;
-      outline-offset: 2px;
-      font-size: 1rem;
       background: #2a2a2a;
       width: 80%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -141,11 +153,11 @@
       overflow: hidden;
     }
 
-    #messageForm textarea[type="text"]::placeholder {
+    #messageForm textarea::placeholder {
       color: #777;
     }
 
-    #sendbutton {
+    #sendBtn {
       margin-left: 12px;
       background: #3a86ff;
       border: none;
@@ -154,21 +166,20 @@
       border-radius: 20px;
       cursor: pointer;
       font-size: 1rem;
+      height: 38px;
       transition: background-color 0.2s ease;
     }
 
-    #sendbutton:hover {
+    #sendBtn:hover {
       background: #265ecf;
     }
 
     #usernameModal {
       position: fixed;
       inset: 0;
-      background: rgba(18, 18, 18, 0.95);
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 10;
     }
 
     #usernameModalContent {
@@ -223,27 +234,6 @@
     ::-webkit-scrollbar-thumb:hover {
       background: #777;
     }
-
-    #attachBtn {
-      background: #2a2a2a;
-      border: none;
-      font-weight: 600;
-      padding: 10px 12px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: background-color 0.2s ease;
-      margin-right: 12px;
-      width: 36px;
-      height: 36px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #attachBtn:hover {
-      background: #36393e;
-    }
   </style>
 </head>
 
@@ -270,7 +260,7 @@
     <form id="messageForm" autocomplete="off">
       <button type="button" id="attachBtn" onclick="fileInput.click();" title="Attach file">📎</button>
       <textarea type="text" id="messageInput" placeholder="Write a message..."></textarea>
-      <button type="submit" id="sendbutton">Send</button>
+      <button type="submit" id="sendBtn">Send</button>
       <input type="file" id="fileInput" style="display:none;" />
     </form>
   </div>
@@ -287,7 +277,6 @@
     const fileInput = document.getElementById('fileInput');
     const messageInput = document.getElementById('messageInput');
     const chatHeader = document.getElementById('chatHeader');
-    const sendBtn = messageForm.querySelector('button');
 
     let color = localStorage.getItem("color") || "";
     let username = localStorage.getItem("username") || "null";
@@ -453,7 +442,7 @@
         await renderMessages();
       }
       else {
-        app.style = "display:none;";
+        app.style.display = "none";
         usernameModal.style = '';
       }
     });
@@ -466,7 +455,7 @@
       color = `#${hex(r)}${hex(g)}${hex(b)}`;
       username = usernameModalInput.value.trim() || ("user" + (28 + Math.floor(Math.random() * 50) * 2));
       usernameModal.style.display = 'none';
-      app.style.display = 'flex';
+      app.style.display = '';
       localStorage.setItem("username", username);
       localStorage.setItem("color", color);
       chatHeader.innerHTML = username + chatHeader.innerHTML;
