--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <div id="app">
     <div id="chatHeader">
       <button id="menuBtn" onclick="document.getElementById('menu').style.display = document.getElementById('menu').style.display == 'none' ? '' : 'none';" title="Menu" aria-label="Menu">&#9776;</button>
-      <div id="menu">
+      <div id="menu" style="display: none;">
         <ul>
           <li><button onclick="window.open('https://github.com/forexample-u/peer', '_blank')">Github</button></li>
           <li><button id="option2">Change wallpaper</button></li>
