--- a/indexx.html
+++ b/indexx.html
@@ -6,88 +6,39 @@
   <title>Peer private chat</title>
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Ctext x='50' y='70' font-size='70' text-anchor='middle' font-family='Arial'%3EP%3C/text%3E%3C/svg%3E" type="image/svg+xml">
   <style>
-    .message {
-      padding: 16px;
-      background: #2b2b2b;
-      border-radius: 20px;
-      align-self: flex-start;
-      max-width: 75%;
-    }
-    body {
-      margin: 0;
-      font-family: 'Segoe UI';
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    #header {
-      background: #1e1e1e;
-      padding: 10px 15px;
-      display: flex;
-      justify-content: flex-end;
-    }
-    #messages {
-      padding: 15px;
-      background: #121212;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      flex-grow: 1;
-    }
-    #uploadForm {
-      background: #1e1e1e;
-      display: flex;
-      padding: 15px;
-      gap: 10px;
-    }
-    #fileInput {
-      padding: 10px;
-      flex-grow: 1;
-      border: 2px dashed#555;
-      text-align: center;
-      color: #aaa;
-      cursor: pointer;
-      width: 100%;
-    }
-    button {
-      padding: 10px 20px;
-      background: #667eea;
-      border-radius: 20px;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-    }
-    audio, video, img {
-      max-width: 100%;
-      margin-bottom: 6px;
-    }
-    a {
-      display: block;
-      color: #fff;
-      word-break: break-all;
-      text-decoration: none;
-    }
-    ::-webkit-scrollbar {
-      width: 8px;
-    }
-    ::-webkit-scrollbar-thumb {
-      background: #555;
-      border-radius: 6px;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-      background: #777;
-    }
+    body { margin: 0; font-family: 'Segoe UI'; display: flex; flex-direction: column; height: 100vh; }
+    .message { background: #2b2b2b; padding: 16px; border-radius: 20px; align-self: flex-start; max-width: 75%; }
+    #header  { background: #1e1e1e; padding: 15px 20px; font-size: 1.2rem; user-select: none; position: relative; display: flex; justify-content: space-between; font-weight: 600; }
+    #messages { background: #121212; padding: 15px; display: flex; gap: 12px; overflow-y: auto; flex-direction: column; flex-grow: 1; }
+    #uploadForm { background: #1e1e1e; padding: 12px 16px; display: flex; gap: 10px; }
+    #fileInput { padding: 8px; flex-grow: 1; border: 2px dashed#555; text-align: center; color: #aaa; cursor: pointer; width: 100%; }
+    button { background: #3a86ff; padding: 10px 20px; border-radius: 20px; border: none; color: #fff; cursor: pointer; font-weight: 600; font-size: 1rem; }
+    audio, video, img { max-width: 100%; margin-bottom: 6px; }
+    a { display: block; color: #fff; word-break: break-all; text-decoration: none; }
+    ::-webkit-scrollbar { width: 8px; }
+    ::-webkit-scrollbar-thumb { background: #555; border-radius: 6px; }
+    ::-webkit-scrollbar-thumb:hover { background: #777; }
+    #menuBtn { background: transparent; border: none; font-size: 1.5rem; cursor: pointer; padding: 0; line-height: 1; font-weight: 400; }
+    #menu.hidden { display: none; }
+    #menu { position: absolute; top: 100%; right: 20px; background: #2c2c2c; border: 1px solid #444; border-radius: 4px; margin-top: 5px; min-width: 120px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5); }
+    #menu ul { list-style: none; margin: 0; padding: 5px 0; }
+    #menu button { background: transparent; border: none; width: 100%; padding: 8px 15px; text-align: left; cursor: pointer; font-size: 1rem; font-weight: 400; }
   </style>
 </head>
-
 <body>
-  <div id="header"><a id="share" href="#">share</a></div>
+  <div id="header" style="color: #fff;"><a href="/">Peer</a>
+    <button id="menuBtn" onclick="document.getElementById('menu').classList.toggle('hidden');" title="Menu" aria-label="Menu">☰</button>
+    <div id="menu" class="hidden">
+      <ul>
+        <li><button onclick="window.open('https://github.com/forexample-u/peer', '_blank')">Github</button></li>
+        <li><button id="share">Copy link</button></li>
+        <li><button onclick="window.location.href = '?links=1';">Links</button></li>
+        <li><button onclick="if (confirm('Delete messages?')) { localStorage.removeItem('files'); location.reload(); }">Clear messages</button></li>
+      </ul>
+    </div>
+  </div>
   <div id="messages"></div>
-  <form id="uploadForm">
-    <input type="file" id="fileInput" multiple />
-    <button type="submit">Send</button>
-  </form>
+  <form id="uploadForm"><input type="file" id="fileInput" multiple /><button type="submit">Send</button></form>
   <script>
     const host = "https://peer1.pythonanywhere.com";
     function addMsg(url) {
@@ -98,20 +49,29 @@
       if (['mp3', 'wav'].includes(ext)) msg.innerHTML = '<audio controls><source src="' + url + '"></source></audio>';
       msg.className = 'message';
       msg.innerHTML += '<a target="_blank" href="' + url + '">' + url + '</a>';
-      if (url && (url.startsWith("http") || url.startsWith("file"))) document.getElementById('messages').appendChild(msg);
+      if (url && (url.startsWith('http') || url.startsWith("file"))) document.getElementById('messages').appendChild(msg);
     }
-
     let links = JSON.parse(localStorage.getItem('files') || '[]');
     window.addEventListener('load', async function () {
       const historyValue = new URLSearchParams(window.location.search).get('history');
       if (historyValue && historyValue.length > 2) {
-        document.getElementById('uploadForm').style.display = "none";
-        document.getElementById('header').style.display = "none";
-        links = await (await fetch(host + "/peer/" + historyValue)).json();
+        document.getElementById('uploadForm').style.display = 'none';
+        links = await (await fetch(host + '/peer/' + historyValue)).json();
+        const url = location.href;
+        const savelinks = JSON.parse(localStorage.getItem("savelinks") || '[]');
+        if (!savelinks.some(x => x.url === url)) { savelinks.push({ url }); }
+        localStorage.setItem("savelinks", JSON.stringify(savelinks));
       }
-      links.forEach(({ url }) => addMsg(url));
+      const linksValue = new URLSearchParams(window.location.search).get('links');
+      if (linksValue && linksValue.toString() == "1") {
+        document.getElementById('uploadForm').style.display = 'none';
+        links = JSON.parse(localStorage.getItem("savelinks") || '[]');
+      }
+      links.forEach(({ url }) => {
+        const uri = url.replace("https://", "http://").includes(location.origin) ? url.replace("https://", "http://") : url;
+        addMsg(uri);
+      });
     });
-
     document.getElementById('uploadForm').onsubmit = async e => {
       e.preventDefault();
       const fileInput = document.getElementById('fileInput');
@@ -121,10 +81,10 @@
         const fd = new FormData(); fd.append('file', file);
         const xhr = new XMLHttpRequest();
         xhr.open('POST', host + '/peer/upload');
-        xhr.upload.onprogress = e => { if (e.lengthComputable) { button.textContent = `Uploading... ${Math.round((e.loaded / e.total) * 100)}%`; } };
+        xhr.upload.onprogress = e => { if (e.lengthComputable) { button.textContent = '' + Math.round((e.loaded / e.total) * 100) + '%'; } };
         xhr.onload = () => {
-          const url = xhr.responseText.replace("/peer.php/", "/");
-          if (url && url.startsWith("http")) {
+          const url = xhr.responseText.replace('/peer.php/', '/');
+          if (url && url.startsWith('http')) {
             addMsg(url);
             links.push({ url });
             localStorage.setItem('files', JSON.stringify(links));
@@ -137,18 +97,20 @@
       button.disabled = false;
       fileInput.value = '';
     }
-
-    document.getElementById("share").onclick = async e => {
+    document.getElementById('share').onclick = async e => {
       const randomName = 'history_' + Math.random().toString(36).substr(2, 9) + '.json';
       const history = new Blob([JSON.stringify(links)], { type: 'application/json' });
       const fd = new FormData(); fd.append('file', history, randomName);
-      let url = (await (await fetch(host + '/peer/upload', { method: 'POST', body: fd })).text()).replace("/peer.php/", "/");
-      if (url && url.startsWith("http")) {
-        url = window.location.origin + window.location.pathname + "?history=0_" + randomName;
+      let url = (await (await fetch(host + '/peer/upload', { method: 'POST', body: fd })).text()).replace('/peer.php/', '/');
+      if (url && url.startsWith('http')) {
+        url = window.location.origin + window.location.pathname + '?history=0_' + randomName;
         addMsg(url);
         links.push({ url });
         localStorage.setItem('files', JSON.stringify(links));
         await navigator.clipboard.writeText(url);
+        const savelinks = JSON.parse(localStorage.getItem("savelinks") || '[]');
+        if (!savelinks.some(x => x.url === url)) { savelinks.push({ url }); }
+        localStorage.setItem("savelinks", JSON.stringify(savelinks));
       }
     }
   </script>
